--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		   Feng
+		  "a""w""d" to move "space to shoot" and "s" to stop
 	    </footer>
 	</body>
 </html>
